--- a/src/demo1/linkpage/linpage.css
+++ b/src/demo1/linkpage/linpage.css
@@ -16,7 +16,6 @@ body {
   border-radius: 5px;
   /* 鼠标手样式 */
   cursor: pointer;
-
 }
 
 img {
@@ -75,6 +74,15 @@ td {
 
 .table-blue {
   background-color: lightblue;
+}
+
+.td-red {
+  background-color: red;
+  color: white;
+}
+
+.td-orange {
+  background-color: orange;
 }
 
 thead th {
